# nomad-parser-h5md

./: README.md  nomad.yaml  pyproject.toml
src/nomad_parser_h5md/: __main__.py  nomad_plugin.yaml  parser.py  schema.py  schema2.py
tests/: test_h5md.py
